--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/tv.css"/>
+    <link rel="stylesheet" href="../../public/css/tools.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -48,88 +48,35 @@
         <a class="header-link"><img  src="../../public/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
     </div>
 </header>
-<div class="tv-content">
-    <h1>Línea Televisión</h1>
-    <div class="oferta-tv">
-        <div>
-            <h2 class="tvh2">EL MEJOR CONTENIDO CON TV+</h2>
-            <p>Incluye un <strong> decodificador 4k</strong>, posibilidad de <strong>grabar programas, 19 canales de televisón</strong>(más canales tdt) y un pack básico</p>
+<div class="tools-content">
+    <h1>Móviles y más</h1>
+    <div class="tools-container">
+        <div class="tool">
+            <img class="tool-img" src="../../public/images/smartphones.jpg" >
+            <div class="tool-info-cont">
+                <h2>Móviles</h2>
+                <p>Consulte nuestro catálogo de <strong>dispositivos móviles</strong>: Apple, Samsung, Xiaomi y más modelos. Ofrecemos modelos tanto nuevos como <strong>seminuevos</strong> al <strong>mejor precio garantizado</strong></p>
+                <button class="button">VER MÁS</button>
+            </div>
         </div>
-        <div>
-            <h2 class="tvh2-price">5,99 €/mes</h2>
-            <button class="button">CONTRATAR</button>
+        <div class="tool">
+            <img class="tool-img" src="../../public/images/objetos-inteligentes.jpeg" >
+            <div class="tool-info-cont">
+                <h2>Objetos inteligentes</h2>
+                <p>También ofrecemos otra serie de objetos inteligentes que le pueden ayudar en su día a día. En esta sección podrá ver los <strong>relojes, enchufes, luces,</strong> y otros dispositivos inteligentes ofrecidos por Telefónico</p>
+                <button class="button">VER MÁS</button>
+            </div>
         </div>
-    </div>
-    <div class="tv-llama">
-        <img  src="../../public//images/header/linea-internet.png" alt="">
-        <h3>Si lo prefieres llama al 900 123 123 para contratarlo.</h3>
-    </div>
-    <div class="tv-container">
-        <div class="tv">
-            <img class="tv-img" src="../../public/images/tv-canales.jpg" >
-            <div class="tv-info-cont">
-                <h3>Canales incluidos</h3>
-                <div class="canales-incluidos">
-                    <p>FOX</p>
-                    <p>Boing</p>
-                    <p>FOX</p>
-                    <p>AXN</p>
-                    <p>Clan</p>
-                    <p>AXN</p>
-                    <p>TNT</p>
-                    <p>BBC One</p>
-                    <p>TNT</p>
-                    <p>Calle 13</p>
-                    <p>Calle 13</p>
-                    <p>Calle 13</p>
-                    <p>Discovery</p>
-                    <p>Discovery</p>
-                    <p>Discovery</p>
-                    <p>Nickelodeon</p>
-                    <p>Nickelodeon</p>
-                    <p>Nickelodeon</p>
-                    <p>Historia</p>
-                    <p>Historia</p>
-                    <p>Historia</p>
-                    <p>Disney Channel</p>
-                    <p>Disney Channel</p>
-                    <p>Disney Channel</p>
-                </div>
+        <div class="tool">
+            <img class="tool-img" src="../../public/images/alarma.jpg" >
+            <div class="tool-info-cont">
+                <h2>Alarmas</h2>
+                <p>Proteja su hogar con nuestro servicio de <strong>alarmas.</strong> Ofrecemos alarmas <strong>anti instrusión</strong> y de <strong>seguridad </strong> ocultas, con <strong>instalación y mantenimiento incluidos.</strong></p>
+                <button class="button">VER MÁS</button>
             </div>
         </div>
     </div>
-    <h2 class="tv-subs-h2">TAMBIÉN PUEDES <strong>AÑADIR SUBSCRIPCIONES A OTROS SERVICIOS</strong></h2>
-    <div class="tv-subs-container">
-        <div class="tv-subs">
-            <img class="tv-subs-img" src="../../public//images/pack.jpg" >
-            <div class="tv-subs-info-cont">
-                <h2>Añade otros packs básicos adicionales</h2>
-                <p>Si a parte de servicio de TV+ quieres alguno de nuestros productos puedes combinarlos de la forma que desees. Para ello, usa nuestro configurador de tarifas.</p>
-                <button class="button">ACCEDER AL CONFIGURADOR</button>
-            </div>
-        </div>  
-    </div>
-    <div class="tv-subs-container">
-        <div class="tv-subs">
-            <img class="tv-subs-img" src="../../public//images/streaming.png" >
-            <div class="tv-subs-info-cont">
-                <h2>Añade suscripciones a servicios de Streaming</h2>
-                <p>Junto a nuestro servicio de TV+ puedes añadir otras subscripciones como Netflix, Disney+ o HBO. De esta forma podrás ver todas tus series favoritas desde un único sitio.</p>
-                <button class="button">AÑADIR SUBSCRIPCIÓN</button>
-            </div>
-        </div>  
-    </div>
-    <div class="tv-subs-container">
-        <div class="tv-subs">
-            <img class="tv-subs-img" src="../../public//images/deco.jpg" >
-            <div class="tv-subs-info-cont">
-                <h2>Adquiere decodificadores adicionales</h2>
-                <p>Para cada TV de tu casa será necesario un decodificador. En el precio de TV+ se incluye un único decodificador. Si necesitas más, puedes añadirlos por tan solo 5€/mes por decodificador.</p>
-                <button class="button">AÑADIR DECODIFICADOR</button>
-            </div>
-        </div>  
-    </div>
-    
+
 </div>
 
 <!--FOOTER-->
