--- a/Telefonia/views/packs.html
+++ b/Telefonia/views/packs.html
@@ -8,7 +8,7 @@
                 <li>1 Línea Móvil</li>
                 <li>Pack TV Series</li>
             </ul>
-            <p>15,99 €/mes</p>
+            <p><strong>15,99 €/mes</strong></p>
             <button class="button">CONTRATAR</button>
         </div>
         <div class="pack">
@@ -19,7 +19,7 @@
                 <li>Llamadas infinitas</li>
                 <li>Pack TV Series + Infantil</li>
             </ul>
-            <p>25,99 €/mes</p>
+            <p><strong>25,99 €/mes</strong></p>
             <button class="button">CONTRATAR</button>
         </div>
         <div class="pack">
@@ -31,12 +31,12 @@
                 <li>Datos ilimitados</li>
                 <li>Pack TV Series + Infantil</li>
             </ul>
-            <p>37,99 €/mes</p>
+            <p><strong>37,99 €/mes</strong></p>
             <button class="button">CONTRATAR</button>
         </div>
     </div>
 
-    <h2>Configuta tu pack a medida</h2>
-    <p>Puede acceder a nuestro configurador de packs para personalizar un pack a medida que se ajuste a sus necesidades. </p>
-    <img  src="images/slider2.png" alt="">
+    <h2 class="h2-config-pack">Configuta tu pack a medida</h2>
+    <p>Puede acceder a nuestro <a href="/">configurador de packs</a> para personalizar un pack a medida que se ajuste a sus necesidades. </p>
+    <img class="pack-img" src="/images/pack.jpg" alt="">
 </div>
