--- a/Telefonia/views/movilesymas.html
+++ b/Telefonia/views/movilesymas.html
@@ -2,7 +2,7 @@
     <h1>Móviles y más</h1>
     <div class="tools-container">
         <div class="tool">
-            <img class="tool-img" src="/images/slider1.png" >
+            <img class="tool-img" src="/images/smartphones.jpg" >
             <div class="tool-info-cont">
                 <h2>Móviles</h2>
                 <p>Consulte nuestro catálogo de <strong>dispositivos móviles</strong>: Apple, Samsung, Xiaomi y más modelos. Ofrecemos modelos tanto nuevos como <strong>seminuevos</strong> al <strong>mejor precio garantizado</strong></p>
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="tool">
-            <img class="tool-img" src="/images/luz.jpg" >
+            <img class="tool-img" src="/images/objetos-inteligentes.jpeg" >
             <div class="tool-info-cont">
                 <h2>Objetos inteligentes</h2>
                 <p>También ofrecemos otra serie de objetos inteligentes que le pueden ayudar en su día a día. En esta sección podrá ver los <strong>relojes, enchufes, luces,</strong> y otros dispositivos inteligentes ofrecidos por Telefónico</p>
