--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/tools.css"/>
+    <link rel="stylesheet" href="../../public/css/ayuda.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -48,35 +48,35 @@
         <a class="header-link"><img  src="../../public/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
     </div>
 </header>
-<div class="tools-content">
-    <h1>Móviles y más</h1>
-    <div class="tools-container">
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/smartphones.jpg" >
-            <div class="tool-info-cont">
-                <h2>Móviles</h2>
-                <p>Consulte nuestro catálogo de <strong>dispositivos móviles</strong>: Apple, Samsung, Xiaomi y más modelos. Ofrecemos modelos tanto nuevos como <strong>seminuevos</strong> al <strong>mejor precio garantizado</strong></p>
-                <button class="button">VER MÁS</button>
+<div class="ayuda-content">
+    <h1>Ayuda</h1>
+    <div class="ayuda-container">
+        <div class="ayuda">
+            <img class="ayuda-img" src="../../public/images/contact.png" >
+            <div class="ayuda-info-cont">
+                <h2>Contacto</h2>
+                <p>Póngase en contacto con nosotros si no encuentra lo que busca o tiene alguna duda</p>
+                <button class="button">VER DATOS DE CONTACTO</button>
             </div>
         </div>
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/objetos-inteligentes.jpeg" >
-            <div class="tool-info-cont">
-                <h2>Objetos inteligentes</h2>
-                <p>También ofrecemos otra serie de objetos inteligentes que le pueden ayudar en su día a día. En esta sección podrá ver los <strong>relojes, enchufes, luces,</strong> y otros dispositivos inteligentes ofrecidos por Telefónico</p>
-                <button class="button">VER MÁS</button>
+        <div class="ayuda">
+            <img class="ayuda-img" src="../../public/images/faq.png" >
+            <div class="ayuda-info-cont">
+                <h2>Preguntas más frecuentes</h2>
+                <p>Consulte las preguntas más frecuentes de nuestros usuarios.</p>
+                <button class="button">CONSULTAR PREGUNTA FRECUENTES</button>
             </div>
         </div>
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/alarma.jpg" >
-            <div class="tool-info-cont">
-                <h2>Alarmas</h2>
-                <p>Proteja su hogar con nuestro servicio de <strong>alarmas.</strong> Ofrecemos alarmas <strong>anti instrusión</strong> y de <strong>seguridad </strong> ocultas, con <strong>instalación y mantenimiento incluidos.</strong></p>
+        <div class="ayuda">
+            <img class="ayuda-img" src="../../public/images/support.png" >
+            <div class="ayuda-info-cont">
+                <h2>Asistencia y soporte técnico</h2>
+                <p>Disponemos de un personale técnico disponible las 24h del día para ayudarle a solucionar culquier problema con sus servicios contratados.</p>
                 <button class="button">VER MÁS</button>
             </div>
         </div>
     </div>
-
+    
 </div>
 
 <!--FOOTER-->
