--- a/Telefonia/views/tools.html
+++ b/Telefonia/views/tools.html
@@ -2,7 +2,7 @@
     <h1>Herramientas</h1>
     <div class="tools-container">
         <div class="tool">
-            <img class="tool-img" src="/images/slider1.png" >
+            <img class="tool-img" src="/images/speed-test.png" >
             <div class="tool-info-cont">
                 <h2>Test de Velocidad Internet</h2>
                 <p>Analice la velocidad de su línea de internet y compárela con nuestras tarifas de internet.</p>
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="tool">
-            <img class="tool-img" src="/images/slider2.png" >
+            <img class="tool-img" src="/images/pack.jpg" >
             <div class="tool-info-cont">
                 <h2>Configurador de packs</h2>
                 <p>Cree sus packs de Internet, Móvil y TV personalizados y consulte el precio final con nuestro configurador de packs.</p>
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="tool">
-            <img class="tool-img" src="/images/slider1.png" >
+            <img class="tool-img" src="/images/finder.jpg" >
             <div class="tool-info-cont">
                 <h2>Buscador de tiendas</h2>
                 <p>Encuentra la tienda más cercana, consulta su horario y disponibilidad para recibir pedidos.</p>
