--- a/Telefonia/public/css/tools.css
+++ b/Telefonia/public/css/tools.css
@@ -23,7 +23,6 @@
 .tool{
     display: grid;
     grid-template-columns: 40% 60%;
-
     height: 40vh;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
@@ -31,15 +30,15 @@
 .tool-img{
     height: 100%;
     width: 100%;
-    
 }
 
 .tool-info-cont{
     display: grid;
-    justify-content: center;
-    align-items: center;
-    grid-template-rows: 10% 50% 30%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    grid-template-rows: 10% 70% 20%;
     padding: 20px;
+    grid-template-columns: 100%;
 }
 
 .button {
@@ -51,4 +50,5 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    
   }
