--- a/Telefonia/views/empresas.html
+++ b/Telefonia/views/empresas.html
@@ -1,22 +1,18 @@
 <div class="emp-content">
     <h1>Empresas</h1>
-    <div class="empresas-banner">
+    <div class="emps-banner">
         <h2>Casos de Éxito</h2>
-        <img class="empresa-img" src="images/slider1.png" >
-        <img class="empresa-img" src="images/slider1.png" >
-        <img class="empresa-img" src="images/slider1.png" >
-        <img class="empresa-img" src="images/slider1.png" >
-        <img class="empresa-img" src="images/slider1.png" >
+        <img class="emp-img" src="/images/exitos.png" >
     </div>
 
-    <h2>Servicios para grandes empresas</h2>
-    <div class="empresas-container">
-        <div class="empresa">
-            <img class="empresa-img" src="images/slider1.png" >
-            <div class="empresa-info-cont">
-                <h3>Housing</h3>
+    <h2 class="h2-empresas">Servicios para grandes empresas</h2>
+    <div class="emps-container">
+        <div class="emp">
+            <img class="emp-img-cont" src="/images/hosting.jpg" >
+            <div class="emp-info-cont">
+                <h3>Hosting</h3>
                 <div>
-                    <p>El Housing es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
+                    <p>El Hosting es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
                     <ul>
                         <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
                         <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
@@ -25,9 +21,9 @@
                 <button class="button">VER MÁS</button>
             </div>
         </div>
-        <div class="empresa">
-            <img class="empresa-img" src="images/slider2.png" >
-            <div class="empresa-info-cont">
+        <div class="emp">
+            <img class="emp-img" src="/images/cloud.png" >
+            <div class="emp-info-cont-2">
                 <h3>Copia de seguridad en la nube</h3>
                 <div>
                     <p>Si no quiere preocuparse por tener que guardar sus copias de seguridad en algún lugar seguro, nosostros lo hacemos por usted.</p>
