--- a/Telefonia/views/grandes-empresas.html
+++ b/Telefonia/views/grandes-empresas.html
@@ -2,15 +2,11 @@
     <h1>Grandes Empresas</h1>
     <div class="empresas-banner">
         <h2>Casos de Éxito</h2>
-        <img class="empresa-img" src="images/slider1.png" >
-        <img class="empresa-img" src="images/slider1.png" >
-        <img class="empresa-img" src="images/slider1.png" >
-        <img class="empresa-img" src="images/slider1.png" >
-        <img class="empresa-img" src="images/slider1.png" >
+        <img class="emp-img" src="/images/exitos.png" >
     </div>
     <div class="contacto-empresa-container">
         <div class="contacto-empresa">
-            <img  src="images/header/linea-internet.png" alt="">
+            <img  src="/images/header/linea-internet.png" alt="">
             <div class="info-contact-empresas">
                 <h3>¿Estás interesado? Contacta con el servicio de ventas.</h3>
                 <p> Contacta con nuestro servicio de ventas y haremos un <strong>estudio personalizados</strong> a tu empresa. De esta forma podremos darte una <strong>oferta única</strong> que se ajuste perfectamente a sus necesidades. Si lo prefieres, puedes llamar al <strong>900 123 123</strong></p>
@@ -21,11 +17,11 @@
     <h2>Servicios para grandes empresas</h2>
     <div class="grandes-empresas-container">
         <div class="empresa">
-            <img class="empresa-img" src="images/slider1.png" >
+            <img class="empresa-info-img" src="/images/hosting.jpg" >
             <div class="empresa-info-cont">
-                <h3>Housing</h3>
+                <h3>Hosting</h3>
                 <div>
-                    <p>El Housing es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
+                    <p>El Hosting es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
                     <ul>
                         <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
                         <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
@@ -35,8 +31,8 @@
             </div>
         </div>
         <div class="empresa">
-            <img class="empresa-img" src="images/slider2.png" >
-            <div class="empresa-info-cont">
+            <img class="empresa-info-img" src="/images/cloud.png" >
+            <div class="empresa-info-cont-2">
                 <h3>Copia de seguridad en la nube</h3>
                 <div>
                     <p>Si no quiere preocuparse por tener que guardar sus copias de seguridad en algún lugar seguro, nosostros lo hacemos por usted.</p>
