--- a/Telefonia/public/css/contacto.css
+++ b/Telefonia/public/css/contacto.css
@@ -27,16 +27,20 @@
 }
 
 .contacto-img{
-    height: 210px;
-    width: 1000px;
+    height: 100%;
 }
 
 .contacto-info-cont{
     display: grid;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
+    grid-template-rows: 19% 70% 20%;
     padding: 20px;
-    line-height: 1em;
+    grid-template-columns: 100%;
+}
+
+.contacto-info-cont h2{
+    text-align: start;
 }
 
 .button {
