--- a/Telefonia/public/css/empresas.css
+++ b/Telefonia/public/css/empresas.css
@@ -1,7 +1,121 @@
-.empresas-container{
+.emp-content{
+    display: grid;
+    grid-template-rows: 5% 40% 8% 8% auto ;
+    margin: 5vh 0px ; 
+    height: 220vh;
+}
+
+.emps-container{
     display: grid;
     justify-content: center;
     padding: 0vh 30vh;
     gap: 4vh;
     margin-bottom: 4vh;
 }
+
+.h2-empresas{
+    justify-self: center;
+}
+.grandes-emps-content{
+    display: grid;
+    grid-template-rows: 5% 20% 15% 8% auto ;
+    margin: 5vh 0px ; 
+    height: 220vh;
+}
+
+
+.grandes-emps-content h2,h1{
+    text-align: center;
+}
+
+.emps-banner{
+    display: grid;
+    background-color: #82c2fd;
+    justify-content: center;
+    text-align: center;
+    padding: 5vh;
+    gap: 2vh;
+    height: 80vh;
+}
+
+
+
+.emps-banner h2{
+    color: white;
+    grid-column: 1/6;
+    font-size: 2.2em;
+}
+
+.contacto-emp-container{
+    margin-top: 5vh;
+    padding: 2vh 40vh;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 100%;
+}
+.contacto-emp{
+    border: 1px solid #222;
+    border-radius: 1vh;
+    display: grid;
+    grid-template-columns: 10% 70% 20%;
+    align-items: center;
+    padding: 3vh;
+    gap:4vh;
+}
+
+
+.contacto-emp button{
+    width: 80%;
+    margin-left: -2vh;
+}
+
+.grandes-emps-container{
+    display: grid;
+    grid-template-rows: 45% auto;
+    grid-template-columns: 90%;
+    justify-content: center;
+    justify-self: center;
+    width: 150vh;
+    gap: 5vh;
+}
+
+
+.emp{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    height: 45vh;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+
+
+.emp-img-cont{
+    height: 100% ;
+}
+
+.emp-info-cont{
+    display: grid;
+    justify-content: center;
+    align-items: flex-start;
+    grid-template-rows: 10% 75% 5%;
+    padding: 20px;
+}
+
+.emp-info-cont-2{
+    display: grid;
+    justify-content: center;
+    align-items: flex-start;
+    grid-template-rows: 10% 55% 5%;
+    padding: 20px;
+}
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
