--- a/Telefonia/public/css/grandes-empresas.css
+++ b/Telefonia/public/css/grandes-empresas.css
@@ -1,8 +1,8 @@
 .grandes-empresas-content{
     display: grid;
-    grid-template-rows: 5% 20% 15% 8% auto ;
+    grid-template-rows: 5% 35% 15% 5% auto ;
     margin: 5vh 0px ; 
-    height: 220vh;
+    height: 260vh;
 }
 
 
@@ -12,14 +12,15 @@
 
 .empresas-banner{
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
     background-color: #82c2fd;
+    justify-content: center;
     padding: 5vh;
     gap: 2vh;
+    height: 80vh;
 }
 
-.empresas-banner img{
-    width: 40vh;
+.empresa-img-2{
+    height:  100%;
 }
 
 
@@ -71,15 +72,39 @@
 }
 
 .empresa-img{
-    height: 100%;
-    width: 100%;
+    height: 60%;
+    width: 1000%;
+}
+
+.empresa-img-cont{
+    height: 100% ;
 }
 
 .empresa-info-cont{
     display: grid;
     justify-content: center;
     align-items: flex-start;
-    grid-template-rows: 15% 70% 10%;
+    grid-template-rows: 10% 75% 5%;
+    padding: 20px;
+}
+
+.empresa-info-cont-2{
+    display: grid;
+    justify-content: center;
+    align-items: flex-start;
+    grid-template-rows: 10% 70% 5%;
+    padding: 20px;
+}
+
+.empresa-info-img{
+    height: 100%;
+}
+
+.empresa-info-cont-2{
+    display: grid;
+    justify-content: center;
+    align-items: flex-start;
+    grid-template-rows: 10% 55% 5%;
     padding: 20px;
 }
 
