--- a/Telefonia/views/pequeñas-empresas.html
+++ b/Telefonia/views/pequeñas-empresas.html
@@ -40,36 +40,36 @@
         </div>
     </div>
     <h2>Servicios para pequeñas empresas y autónomos</h2>
-    <div class="pequeñas-empresas-container">
-        <div class="empresa">
-            <img class="empresa-img" src="images/slider1.png" >
-            <div class="empresa-info-cont">
-                <h3>Housing</h3>
-                <div>
-                    <p>El Housing es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
-                    <ul>
-                        <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
-                        <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
-                    </ul>
-                </div>    
-                <button class="button">VER MÁS</button>
-            </div>
-        </div>
-        <div class="empresa">
-            <img class="empresa-img" src="images/slider2.png" >
-            <div class="empresa-info-cont">
-                <h3>Copia de seguridad en la nube</h3>
-                <div>
-                    <p>Si no quiere preocuparse por tener que guardar sus copias de seguridad en algún lugar seguro, nosostros lo hacemos por usted.</p>
-                    <ul>
-                        <li>Espacio de almacenamiento infinito</li>
-                        <li>Pague solamente por el espacio ocupado</li>
-                        <li>Redundancia de almacenamiento en 3 localizaciones diferentes</li>
-                        <li>Acceso a los datos 24/7</li>
-                    </ul>
-                </div>
-                <button class="button">VER MÁS</button>
-            </div>
-        </div>
-    </div>    
+    <div class="grandes-empresas-container">
+      <div class="empresa">
+          <img class="empresa-info-img" src="/images/hosting.jpg" >
+          <div class="empresa-info-cont">
+              <h3>Hosting</h3>
+              <div>
+                  <p>El Hosting es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
+                  <ul>
+                      <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
+                      <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
+                  </ul>
+              </div>    
+              <button class="button">VER MÁS</button>
+          </div>
+      </div>
+      <div class="empresa">
+          <img class="empresa-info-img" src="/images/cloud.png" >
+          <div class="empresa-info-cont-2">
+              <h3>Copia de seguridad en la nube</h3>
+              <div>
+                  <p>Si no quiere preocuparse por tener que guardar sus copias de seguridad en algún lugar seguro, nosostros lo hacemos por usted.</p>
+                  <ul>
+                      <li>Espacio de almacenamiento infinito</li>
+                      <li>Pague solamente por el espacio ocupado</li>
+                      <li>Redundancia de almacenamiento en 3 localizaciones diferentes</li>
+                      <li>Acceso a los datos 24/7</li>
+                  </ul>
+              </div>
+              <button class="button">VER MÁS</button>
+          </div>
+      </div>
+  </div>     
 </div>
