--- a/Telefonia/views/linea-internet.html
+++ b/Telefonia/views/linea-internet.html
@@ -34,7 +34,7 @@
                 <h3>Configura tu tarifa a tu medida</h3>
                 <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de internet, de movil o de TV</p>
             </div>
-            <button class="button">Configurar</button>
+            <a href="/configurador"><button  class="button">Configurar</button></a>
         </div>
     </div>
     <div class="razones-linea-internet-container">
@@ -74,7 +74,7 @@
                 <h3>Localizador de tiendas</h3>
                 <p>Si lo prefiers puedes acercarte hasta alguna de nuestras tiendas para realizar cualquier trámite. Acceder a nuestro localizador de tiendas, en el encontrarás la localización y el horario de las tiendas más cercanas.</p>
             </div>
-            <button class="button">VER TIENDAS</button>
+            <a href="/buscador"><button class="button">VER TIENDAS</button></a>
         </div>
     </div>
     
