--- a/Telefonia/views/linea-movil.html
+++ b/Telefonia/views/linea-movil.html
@@ -34,7 +34,7 @@
                 <h3>Configura tu tarifa a tu medida</h3>
                 <p>Si las tarifas anteriores no son suficientes para ti puedes configurar tu tarifa a tu medida. Añadiendo líneas de movil, de movil o de TV</p>
             </div>
-            <button class="button">Configurar</button>
+            <a href="/configurador"><button  class="button">Configurar</button></a>
         </div>
     </div>
     <div class="interes-movil">
