--- a/Telefonia/views/packs.html
+++ b/Telefonia/views/packs.html
@@ -1,5 +1,5 @@
 <div class="packs-content">
-    <h1>Packs Telefónico</h1>
+    <h1>Packs Telefonico</h1>
     <div class="packs-container">
         <div class="pack">
             <h2>Pack Básico</h2>
@@ -37,6 +37,6 @@
     </div>
 
     <h2 class="h2-config-pack">Configuta tu pack a medida</h2>
-    <p>Puede acceder a nuestro <a href="/">configurador de packs</a> para personalizar un pack a medida que se ajuste a sus necesidades. </p>
+    <p>Puede acceder a nuestro <a href="#">configurador de packs</a> para personalizar un pack a medida que se ajuste a sus necesidades. </p>
     <img class="pack-img" src="/images/pack.jpg" alt="">
 </div>
