--- a/Telefonia/views/pedidos.html
+++ b/Telefonia/views/pedidos.html
@@ -4,7 +4,7 @@
         <a>Mi información</a>
         <a>Mis Notificaciones</a>
         <a>Mis Facturas</a>
-        <a>Mis Productos Contratados</a>
+        <a href="/productos">Mis Productos Contratados</a>
         <a><strong>Mis Pedidos</strong></a>
         <a>Configuración Roaming</a>
     </div>
