--- a/Telefonia/views/productos.html
+++ b/Telefonia/views/productos.html
@@ -5,7 +5,7 @@
         <a>Mis Notificaciones</a>
         <a>Mis Facturas</a>
         <a><strong>Mis Productos Contratados</strong></a>
-        <a>Mis productos</a>
+        <a href="/pedidos">Mis pedidos</a>
         <a>Configuración Roaming</a>
     </div>
     <div class="productos-right-panel">
