--- a/Telefonia/views/test-velocidad.html
+++ b/Telefonia/views/test-velocidad.html
@@ -1,7 +1,7 @@
 <div class="velocidad-content">
     <h1>Test de velocidad</h1>
     <div class="velocidad-card">
-        <a href="/" class="internet-img"><img width="300" src="/images/internet.png" alt=""></a>
+        <a href="/" class="internet-img"><img width="300" src="/images/velocimetro.png" alt=""></a>
         <div class="velocidad-right-panel">
             <h2>Prueba tu conexión</h2>
             <div class="test-v-cont">
