--- a/Telefonia/views/layout/base.html
+++ b/Telefonia/views/layout/base.html
@@ -77,9 +77,9 @@
 <!--HEADER-->
 <header class="header-big-container">
     <div class="header-contaiter-1">
-        <a>Autónomos y empresas</a>
-        <a>Contacto</a>
-        <a>Area Clientes</a>
+        <a href="/pequeñas-empresas">Autónomos y empresas</a>
+        <a href="/contacto">Contacto</a>
+        <a href="/productos">Area Clientes</a>
     </div>
     <div class="header-contaiter-2">
         <a href="/"><img width="400" src="/images/nombre.png" alt=""></a>
@@ -105,7 +105,7 @@
                 <h4 class="uk-margin-top">Lo más buscado</h4>
                 <ul class="uk-list uk-list-bullet">
                     <li><a href="/preguntas">Preguntas frecuentes</a></li>
-                    <li><a href="/buscador-tiendas">Bucador de tiendas</a></li>
+                    <li><a href="/buscador">Bucador de tiendas</a></li>
                     <li><a href="/test-velocidad">Test de velocidad de internet</a></li>
                     <li><a href="/packs">Configurador de packs</a></li>
                     <li><a href="/area-cliente">Área cliente</a></li>
@@ -132,9 +132,9 @@
             <div>
                 <h4 class="uk-margin-top">Ayuda</h4>
                 <ul class="uk-list uk-list-bullet">
-                    <li><a href="/e_pequenas">Contacto</a></li>
-                    <li><a href="/packs">Preguntas frecuentes</a></li>
-                    <li><a href="/internet">Buscador de tiendas</a></li>
+                    <li><a href="/contacto">Contacto</a></li>
+                    <li><a href="/preguntas">Preguntas frecuentes</a></li>
+                    <li><a href="/buscador">Buscador de tiendas</a></li>
                 </ul>
             </div>
           
