--- a/Telefonia/views/movilesymas.html
+++ b/Telefonia/views/movilesymas.html
@@ -6,7 +6,7 @@
             <div class="tool-info-cont">
                 <h2>Móviles</h2>
                 <p>Consulte nuestro catálogo de <strong>dispositivos móviles</strong>: Apple, Samsung, Xiaomi y más modelos. Ofrecemos modelos tanto nuevos como <strong>seminuevos</strong> al <strong>mejor precio garantizado</strong></p>
-                <button class="button">VER MÁS</button>
+                <a href="/moviles"><button class="button">VER MÁS</button></a>
             </div>
         </div>
         <div class="tool">
@@ -14,7 +14,7 @@
             <div class="tool-info-cont">
                 <h2>Objetos inteligentes</h2>
                 <p>También ofrecemos otra serie de objetos inteligentes que le pueden ayudar en su día a día. En esta sección podrá ver los <strong>relojes, enchufes, luces,</strong> y otros dispositivos inteligentes ofrecidos por Telefónico</p>
-                <button class="button">VER MÁS</button>
+                <a href="/objetos-inteligentes"><button class="button">VER MÁS</button></a>
             </div>
         </div>
         <div class="tool">
@@ -22,7 +22,7 @@
             <div class="tool-info-cont">
                 <h2>Alarmas</h2>
                 <p>Proteja su hogar con nuestro servicio de <strong>alarmas.</strong> Ofrecemos alarmas <strong>anti instrusión</strong> y de <strong>seguridad </strong> ocultas, con <strong>instalación y mantenimiento incluidos.</strong></p>
-                <button class="button">VER MÁS</button>
+                <a href="/alarmas"><button class="button">VER MÁS</button></a>
             </div>
         </div>
     </div>
