--- a/Telefonia/views/ayuda.html
+++ b/Telefonia/views/ayuda.html
@@ -6,7 +6,7 @@
             <div class="ayuda-info-cont">
                 <h2>Contacto</h2>
                 <p>Póngase en contacto con nosotros si no encuentra lo que busca o tiene alguna duda</p>
-                <button class="button">VER DATOS DE CONTACTO</button>
+                <a href="/contacto"><button class="button">VER DATOS DE CONTACTO</button></a>
             </div>
         </div>
         <div class="ayuda">
@@ -14,7 +14,7 @@
             <div class="ayuda-info-cont">
                 <h2>Preguntas más frecuentes</h2>
                 <p>Consulte las preguntas más frecuentes de nuestros usuarios.</p>
-                <button class="button">CONSULTAR PREGUNTA FRECUENTES</button>
+                <a href="/preguntas"><button class="button">CONSULTAR PREGUNTA FRECUENTES</button></a>
             </div>
         </div>
         <div class="ayuda">
