--- a/Telefonia/views/index.html
+++ b/Telefonia/views/index.html
@@ -1,48 +1,57 @@
-
-<section class="uk-section uk-section-default">
-    <div class="uk-container">
-
-        <div class="uk-card uk-grid-collapse uk-child-width-1-1@s uk-margin" uk-grid>
-            <div class="uk-slider-container-offset" uk-slider="autoplay: true">
-                <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-                    <ul class="uk-slider-items uk-child-width-1-1@s uk-grid">
-                        <li>
-                            <div class="uk-card uk-grid-collapse " uk-grid>
-                                <div class="uk-flex-last@s uk-width-2-3@s uk-card-media-right uk-cover-container">
-                                    <img src="images/slider1.png"  alt="" uk-cover>
-                                    <canvas width="600" height="300"></canvas>
-                                </div>
-                                <div class="uk-width-1-3@s">
-                                    <div class="uk-card-body uk-text-lead">
-                                        <p style="color: #000000;">Disfruta de <span class="uk-text-bold">2 líneas móviles + 300Mbps de fibra </span> óptica por solo <span class="uk-text-bold">26,99€/mes</span></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="uk-card uk-grid-collapse " uk-grid>
-                                <div class="uk-flex-last@s uk-width-2-3@s uk-card-media-right uk-cover-container">
-                                    <img src="images/slider2.png" alt="" uk-cover>
-                                    <canvas width="600" height="300"></canvas>
-                                </div>
-                                <div class="uk-width-1-3@s">
-                                    <div class="uk-card-body uk-text-lead">
-                                        <p class="uk-card-title uk-text-bold" style="color: #000000;">¿Por qué Telefonico?</p>
-                                        <p style="color: #000000;">Tecnología 5G ilimitada</p>
-                                        <p style="color: #000000;">La mejor cobertura de Red</p>
-                                        <p style="color: #000000;">Televisión LG de regalo</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-
-                    <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-                    <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
-                </div>
-                <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+<div class="home-content">
+    <div class="home-card">
+        <img  class="fibra-img" src="/images/fibra.jpg" alt="">
+        <div class="home-card-info">
+            <h2>Nuestra línea de internet con 600Mb de pura fibra</h2>
+            <div>
+                <p>Nuestra línea de internet de 600Mb incluye</p>
+                <ul>
+                    <li>Instalada y lista para usar en 24h</li>
+                    <li>600Mb simétricos de auténtica fibra</li>
+                    <li>Sin permanencia ni costes de instalación</li>
+                </ul>
+                <p>Precio: 39,95€ al mes, para siempre</p>
             </div>
+            <button class="home-button">Contratar</button>
         </div>
-
     </div>
-</section>
+    <h2 class="home-h2">NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS MÓVILES</strong></h2>
+    <div class="tarifas-lineas-movil">
+        <div class="tarifa-linea-movil">
+            <h3><strong>19,99 €/mes</strong></h3>
+            <div class="info-tarifa-linea-movil">
+              <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
+              <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+            </div>
+          <button class="button">Contratar</button>
+        </div>
+        <div class="tarifa-linea-movil">
+          <h3><strong>29,99 €/mes</strong></h3>
+          <div class="info-tarifa-linea-movil">
+            <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
+            <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+          </div>
+        <button class="button">Contratar</button>
+      </div>
+      <div class="tarifa-linea-movil">
+          <h3><strong>49,99 €/mes</strong></h3>
+          <div class="info-tarifa-linea-movil">
+            <img  src="/images/icons/phonelink_ring_black_48dp.svg" alt="">
+            <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
+          </div>
+        <button class="button">Contratar</button>
+      </div>
+    </div>
+    <h2 class="home-h2">LA <strong>EMPRESA</strong> DE LAS <strong>EMPRESAS</strong></h2>
+    <div class="home-empresas">
+        <div class="casos-exito-home">
+            <img  src="/images/exitos.png" alt="">
+        </div>
+        <div class="empresas-home">
+            <a href="/pequeñas-empresas" class="a-home"><h2 class="empresas-home-h2">PEQUEÑAS EMPRESAS</h2></a>
+            <p>Para las empresas más pequeñas ofrecemos <strong>líneas de internet,fijo y móvil</strong> por separado. O si lo prefieres, puedes contratar alguno de nuestros <strong>packs</strong> y configurarlo a tu medida.</p>
+            <a href="/grandes-empresas" class="a-home"><h2 class="empresas-home-h2">GRANDES EMPRESAS</h2></a>
+            <p>Si quieres contratar nuestros servicios para una empresa de <strong>más de 10 empleados</strong> contacta con nuestro <strong>servicio de ventas en el <strong>900 123 123</strong> para más información.</p>
+        </div>
+    </div>
+</div>
