--- a/Telefonia/views/layout/base.html
+++ b/Telefonia/views/layout/base.html
@@ -9,6 +9,7 @@
 
 
     <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="/css/home.css"/>
     <link rel="stylesheet" href="/css/alarm.css"/>
     <link rel="stylesheet" href="/css/linea-movil.css"/>
     <link rel="stylesheet" href="/css/movilesymas.css"/>
