--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/home.css"/>
-    <link rel="stylesheet" href="../../public/css/linea-movil.css"/>
+    <link rel="stylesheet" href="../../public/css/grandes-empresas.css"/>
   
 
     <script src="../../public/js/jquery.min.js"></script>
@@ -51,50 +50,54 @@
         <a class="header-link"><img  src="../../public/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
     </div>
 </header>
-<div class="home-content">
-    <div class="home-card">
-        <img  class="fibra-img" src="../../public/images/fibra.jpg" alt="">
-        <div class="home-card-info">
-            <h2>Nuestra línea de internet con 600Mb de pura fibra</h2>
-            <div>
-                <p>Nuestra línea de internet de 600Mb incluye</p>
-                <ul>
-                    <li>Instalada y lista para usar en 24h</li>
-                    <li>600Mb simétricos de auténtica fibra</li>
-                    <li>Sin permanencia ni costes de instalación</li>
-                </ul>
-                <p>Precio: 39,95€ al mes, para siempre</p>
+<div class="grandes-empresas-content">
+    <h1>Grandes Empresas</h1>
+    <div class="empresas-banner">
+        <img class="emp-img" src="../../public/images/exitos.png" >
+    </div>
+    <div class="contacto-empresa-container">
+        <div class="contacto-empresa">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <div class="info-contact-empresas">
+                <h3>¿Estás interesado? Contacta con el servicio de ventas.</h3>
+                <p> Contacta con nuestro servicio de ventas y haremos un <strong>estudio personalizados</strong> a tu empresa. De esta forma podremos darte una <strong>oferta única</strong> que se ajuste perfectamente a sus necesidades. Si lo prefieres, puedes llamar al <strong>900 123 123</strong></p>
             </div>
-            <button class="home-button">Contratar</button>
+            <button class="button">Contactar</button>
         </div>
     </div>
-    <h2 class="home-h2">NUESTRAS <strong>TARIFAS</strong> DE <strong>LÍNEAS MÓVILES</strong></h2>
-    <div class="tarifas-lineas-movil">
-        <div class="tarifa-linea-movil">
-            <h3><strong>19,99 €/mes</strong></h3>
-            <div class="info-tarifa-linea-movil">
-              <img  src="../../public/images/icons/phonelink_ring_black_48dp.svg" alt="">
-              <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+    <h2>Servicios para grandes empresas</h2>
+    <div class="grandes-empresas-container">
+        <div class="empresa">
+            <img class="empresa-info-img" src="../../public/images/hosting.jpg" >
+            <div class="empresa-info-cont">
+                <h3>Hosting</h3>
+                <div>
+                    <p>El Hosting es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
+                    <ul>
+                        <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
+                        <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
+                    </ul>
+                </div>    
+                <button class="button">VER MÁS</button>
             </div>
-          <button class="button">Contratar</button>
         </div>
-        <div class="tarifa-linea-movil">
-          <h3><strong>29,99 €/mes</strong></h3>
-          <div class="info-tarifa-linea-movil">
-            <img  src="../../public/images/icons/phonelink_ring_black_48dp.svg" alt="">
-            <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
-          </div>
-        <button class="button">Contratar</button>
-      </div>
-      <div class="tarifa-linea-movil">
-          <h3><strong>49,99 €/mes</strong></h3>
-          <div class="info-tarifa-linea-movil">
-            <img  src="../../public/images/icons/phonelink_ring_black_48dp.svg" alt="">
-            <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
-          </div>
-        <button class="button">Contratar</button>
-      </div>
-    </div>
+        <div class="empresa">
+            <img class="empresa-info-img" src="../../public/images/cloud.png" >
+            <div class="empresa-info-cont-2">
+                <h3>Copia de seguridad en la nube</h3>
+                <div>
+                    <p>Si no quiere preocuparse por tener que guardar sus copias de seguridad en algún lugar seguro, nosostros lo hacemos por usted.</p>
+                    <ul>
+                        <li>Espacio de almacenamiento infinito</li>
+                        <li>Pague solamente por el espacio ocupado</li>
+                        <li>Redundancia de almacenamiento en 3 localizaciones diferentes</li>
+                        <li>Acceso a los datos 24/7</li>
+                    </ul>
+                </div>
+                <button class="button">VER MÁS</button>
+            </div>
+        </div>
+    </div>    
 </div>
 
 <!--FOOTER-->
