la mejor idea que he tenido julio

--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/grandes-empresas.css"/>
+    <link rel="stylesheet" href="../../public/css/movil.css"/>
   
 
     <script src="../../public/js/jquery.min.js"></script>
@@ -50,54 +50,8 @@
         <a class="header-link"><img  src="../../public/images/header/contacto.png" width="80" alt=""><span>Contacto</span></a>
     </div>
 </header>
-<div class="grandes-empresas-content">
-    <h1>Grandes Empresas</h1>
-    <div class="empresas-banner">
-        <img class="emp-img" src="../../public/images/exitos.png" >
-    </div>
-    <div class="contacto-empresa-container">
-        <div class="contacto-empresa">
-            <img  src="../../public/images/header/linea-internet.png" alt="">
-            <div class="info-contact-empresas">
-                <h3>¿Estás interesado? Contacta con el servicio de ventas.</h3>
-                <p> Contacta con nuestro servicio de ventas y haremos un <strong>estudio personalizados</strong> a tu empresa. De esta forma podremos darte una <strong>oferta única</strong> que se ajuste perfectamente a sus necesidades. Si lo prefieres, puedes llamar al <strong>900 123 123</strong></p>
-            </div>
-            <button class="button">Contactar</button>
-        </div>
-    </div>
-    <h2>Servicios para grandes empresas</h2>
-    <div class="grandes-empresas-container">
-        <div class="empresa">
-            <img class="empresa-info-img" src="../../public/images/hosting.jpg" >
-            <div class="empresa-info-cont">
-                <h3>Hosting</h3>
-                <div>
-                    <p>El Hosting es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
-                    <ul>
-                        <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
-                        <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
-                    </ul>
-                </div>    
-                <button class="button">VER MÁS</button>
-            </div>
-        </div>
-        <div class="empresa">
-            <img class="empresa-info-img" src="../../public/images/cloud.png" >
-            <div class="empresa-info-cont-2">
-                <h3>Copia de seguridad en la nube</h3>
-                <div>
-                    <p>Si no quiere preocuparse por tener que guardar sus copias de seguridad en algún lugar seguro, nosostros lo hacemos por usted.</p>
-                    <ul>
-                        <li>Espacio de almacenamiento infinito</li>
-                        <li>Pague solamente por el espacio ocupado</li>
-                        <li>Redundancia de almacenamiento en 3 localizaciones diferentes</li>
-                        <li>Acceso a los datos 24/7</li>
-                    </ul>
-                </div>
-                <button class="button">VER MÁS</button>
-            </div>
-        </div>
-    </div>    
+<div class="movil-content">
+    <img  src="../../public/images/detalles-movil.png" >
 </div>
 
 <!--FOOTER-->
