--- a/Telefonia/views/moviles.html
+++ b/Telefonia/views/moviles.html
@@ -62,53 +62,43 @@
      
         <input aria-label="Busca móviles..." placeholder="Busca móviles..." class="search-input" value="">
 
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
+      <a class="movil-ref" href="/detalles-movil"><div class="mobile-card">
+        <img  src="images/xiaomi-movil.png" >
+       
+      </div></a>
       
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
-      <div class="mobile-card">
-        <img class="mobile-img" src="images/10Tpro.png" >
-        <h2>Xiaomi Max Pro</h2>
-        <p class="mobile-price">300€</p>
-      </div>
   </div>
 </div>
 <script>
