--- a/Telefonia/views/layout/base.html
+++ b/Telefonia/views/layout/base.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="/css/tools.css"/> 
     <link rel="stylesheet" href="/css/buscador.css"/> 
     <link rel="stylesheet" href="/css/configurador.css"/> 
+    <link rel="stylesheet" href="/css/movil.css"/>
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/uikit.js"></script>
